# Spec2Maude

./: .gitignore  ARTIFACT.md  CLAUDE.md  HowToTest.md  LICENSE  Makefile  README.md  STATUS.md  Spec2Maude_Mapping_Summary.md  baseline_step_report_0421.md  builtins.contract  builtins.maude  dune  limitation.md  main.ml  main_0417.ml  main_bs.ml  modelcheck.maude  output.maude  output_bs.maude  paper_plan.md  session_summary.txt  session_summary_2026-04-19.txt  spec2maude.ml  test.maude  translate_err.txt  translator.ml  translator_0417.ml  translator_bs.ml  validation_281_summary.md  wasm-exec-bs.maude  wasm-exec.maude  wasm-init-bs.maude  wasm-init.maude  wasm3.spectec  wasm_to_maude.ml  wat_to_maude_fib.ml
data/: 1-2.ast  1-3-ast.ml  (+2 more)
test/: builtin_backend_generated.sh  builtin_backend_smoke.maude  constructor_component_generated.sh  dune  expr_bool_numeric_operator_regression.ml  iter_rule_fixture.ml  iter_rule_fixture.sh  membership_witness_fixture.ml  membership_witness_search.sh  naming_regression.ml  optional_composition_fixture.ml  optional_composition_reductions.sh  optional_iter_binding_regression.ml  premise_order_generated.sh  record_composition_fixture.ml  record_composition_reductions.sh  record_semantics_generated.sh  record_semantics_regression.ml  rewrite_decd_fixture.ml  rewrite_decd_reduction.sh  rewrite_decd_regression.ml  runtime_truth_decision_fixture.ml  runtime_truth_decision_reductions.sh  runtime_truth_generated.sh  runtime_truth_head_guard_unsupported.ml  runtime_truth_ref_ok_smoke.maude  semantic_false_green.ml  test-core.maude  translate_subset_fixture.ml  wasm-exec.maude
translator/: driver.ml  driver.mli  dune  translator_v1-1_1.ml  translator_v1-1_2.ml  translator_v1-2.ml  translator_v1-3.ml  translator_v1-4.ml  translator_v2.ml
translator/builtin/: builtin_backend.ml  builtin_backend.mli  builtin_float_semantics.ml  builtin_float_semantics.mli  builtin_int_semantics.ml  builtin_int_semantics.mli  builtin_maude_renderer.ml  builtin_maude_renderer.mli  builtin_registry.ml  builtin_registry.mli  builtin_report.ml  builtin_report.mli  builtin_spec.ml  builtin_spec.mli  builtin_types.ml  builtin_types.mli  builtin_usage.ml  builtin_usage.mli  builtin_vector_semantics.ml  builtin_vector_semantics.mli
translator/core/: context.ml  context.mli  diagnostic_provenance.ml  diagnostic_provenance.mli  diagnostics.ml  diagnostics.mli  local_name.ml  local_name.mli  naming.ml  naming.mli  origin.ml  origin.mli
translator/lower/: capture_support.ml  capture_support.mli  condition_closure.ml  condition_closure.mli  def_translate.ml  def_translate.mli  expr_bool_numeric.ml  expr_bool_numeric.mli  expr_iter.ml  expr_iter.mli  expr_record.ml  expr_record.mli  expr_sequence.ml  expr_sequence.mli  expr_support.ml  expr_translate.ml  expr_translate.mli  helper.ml  helper.mli  helper_key.ml  helper_key.mli  helper_materialize_inverse.ml  helper_materialize_inverse.mli  helper_materialize_iter.ml  helper_materialize_iter.mli  helper_materialize_support.ml  helper_materialize_support.mli  helper_registry.ml  helper_registry.mli  helper_request.ml  helper_request.mli  pattern_translate.ml  pattern_translate.mli  premise_capture.ml  premise_capture.mli  premise_diagnostic.ml  premise_diagnostic.mli  premise_eq_binding.ml  premise_eq_binding.mli  premise_eq_declared_inverse_fallback.ml  (+96 more)
translator/lower/condition/: condition_admissibility.ml  condition_admissibility.mli  condition_closure.ml  condition_closure.mli  condition_pattern_certificate.ml  condition_pattern_certificate.mli  source_condition_certificate.ml  source_condition_certificate.mli  source_condition_certificate_internal.ml
translator/lower/definition/: decd_rewrite_condition.ml  decd_rewrite_condition.mli  decd_translate.ml  decd_translate.mli  def_translate.ml  head_specialization.ml  head_specialization.mli  hint_translate.ml  hint_translate.mli
translator/lower/expression/: expr_bool_numeric.ml  expr_bool_numeric.mli  expr_diagnostic.ml  expr_diagnostic.mli  expr_env.ml  expr_env.mli  expr_iter.ml  expr_iter.mli  expr_record.ml  expr_record.mli  expr_result.ml  expr_result.mli  expr_sequence.ml  expr_sequence.mli  expr_subtyping.ml  expr_subtyping.mli  expr_translate.ml  expr_translate.mli
translator/lower/helper/: condition_schedule.ml  condition_schedule.mli  helper.ml  helper.mli  helper_capture.ml  helper_capture.mli  helper_closure.ml  helper_closure.mli  helper_emission.ml  helper_emission.mli  helper_key.ml  helper_materialize_inverse.ml  helper_materialize_inverse.mli  helper_materialize_iter.ml  helper_materialize_iter.mli  helper_materialize_subtyping.ml  helper_materialize_subtyping.mli  helper_registry.ml  helper_registry.mli  helper_request.ml  helper_request.mli  membership_witness_helper.ml  (+1 more)
translator/maude/: emit.ml  emit.mli  generated_reachability.ml  generated_reachability.mli  maude_ir.ml  maude_ir.mli  maude_registry.ml  maude_registry.mli  prelude.ml  prelude.mli  primitive_term.ml  primitive_term.mli  typecheck_term.ml  typecheck_term.mli
translator/source/: analysis.ml  analysis.mli  constructor_registry.ml  constructor_registry.mli  definition_analysis.ml  definition_analysis.mli  naming_collision.ml  naming_collision.mli  relation_analysis.ml  relation_analysis.mli  relation_graph.ml  relation_graph.mli  relation_shape.ml  relation_shape.mli  runtime_ingress_contract.ml  runtime_ingress_contract.mli  runtime_ingress_slice_certificate.ml  runtime_ingress_slice_certificate.mli  runtime_ingress_validation.ml  runtime_ingress_validation.mli  runtime_predicate_closure.ml  runtime_predicate_closure.mli  runtime_truth_scc.ml  runtime_truth_scc.mli  runtime_truth_successor_domain.ml  runtime_truth_successor_domain.mli  runtime_validation_certificate.ml  runtime_validation_certificate.mli  runtime_witness_domain.ml  runtime_witness_domain.mli  runtime_witness_proof.ml  runtime_witness_proof.mli  runtime_witness_space.ml  runtime_witness_space.mli  source_free_vars.ml  source_free_vars.mli  source_index.ml  source_index.mli  source_rule_identity.ml  source_rule_identity.mli  (+4 more)
(+412 files in other folders)
